fix wrong display/printout if the user overrides HTML preferences

See https://gitlab.gnome.org/GNOME/balsa/-/issues/75#note_1444507 for a
description of the issue.

Changes:
- libbalsa/body.[ch]: replace multipart/alternative selection state by a
tri-state enum
- src/balsa-message.c: use the automatic selection (settings, HTML prefs
db) of the multipart/alternative subpart only initially
- src/print-gtk.c: eval tri-state enum

Signed-off-by: Albrecht Dreß <albrecht.dress@netcologne.de>